--- a/SafeBible2/SafeBible_ios/SafeBible/ca.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/ca.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "M'agrada!";
 
+/* Icons for home screen */
+"Icons" = "Icones";
+
 /* Languages view page title */
 "Languages" = "Idiomes";
+
+/* Result of last concordance search */
+"Last Search" = "Última cerca";
 
 /* Menu view page title */
 "Menu" = "Menú";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Elimina";
 
+/* Concordance search bar */
+"Search" = "Cerca";
+
+/* Concordance search history */
+"Searches" = "Cerques";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Envieu-nos comentaris";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Vídeos";
+
+/* Title of Search page */
+"Word Search" = "Recerca de la paraula";
 
 /* Clickable cell title */
 "Write A Review" = "Escriu una ressenya";
