--- a/SafeBible2/SafeBible_ios/SafeBible/cs.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/cs.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Líbí se mi to!";
 
+/* Icons for home screen */
+"Icons" = "Ikony";
+
 /* Languages view page title */
 "Languages" = "Jazyky";
+
+/* Result of last concordance search */
+"Last Search" = "Poslední vyhledávání";
 
 /* Menu view page title */
 "Menu" = "Jídelní lístek";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Odstranit";
 
+/* Concordance search bar */
+"Search" = "Vyhledávání";
+
+/* Concordance search history */
+"Searches" = "Vyhledávání";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Pošlete nám komentáře";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Videa";
+
+/* Title of Search page */
+"Word Search" = "Vyhledávání slov";
 
 /* Clickable cell title */
 "Write A Review" = "Napsat recenzi";
