--- a/SafeBible2/SafeBible_ios/SafeBible/da.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/da.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Jeg kan lide det!";
 
+/* Icons for home screen */
+"Icons" = "Ikoner";
+
 /* Languages view page title */
 "Languages" = "Sprog";
+
+/* Result of last concordance search */
+"Last Search" = "Sidste søgning";
 
 /* Menu view page title */
 "Menu" = "Menu";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Fjerne";
 
+/* Concordance search bar */
+"Search" = "Søg";
+
+/* Concordance search history */
+"Searches" = "søgninger";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Send os kommentarer";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Videoer";
+
+/* Title of Search page */
+"Word Search" = "Ord søgning";
 
 /* Clickable cell title */
 "Write A Review" = "Skrive en anmeldelse";
