--- a/SafeBible2/SafeBible_ios/SafeBible/es.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/es.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "¡Me gusta!";
 
+/* Icons for home screen */
+"Icons" = "Iconos";
+
 /* Languages view page title */
 "Languages" = "Idiomas";
+
+/* Result of last concordance search */
+"Last Search" = "Ultima busqueda";
 
 /* Menu view page title */
 "Menu" = "Menú";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "retirar";
 
+/* Concordance search bar */
+"Search" = "Buscar";
+
+/* Concordance search history */
+"Searches" = "Búsquedas";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Envíenos sus comentarios";
@@ -124,11 +136,14 @@
 "Traditional" = "Tradicional";
 
 /* Clickable cell title */
-"Verse Numbers" = "Números del verso";
+"Verse Numbers" = "Números de verso";
 
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Videos";
+
+/* Title of Search page */
+"Word Search" = "Búsqueda de palabras";
 
 /* Clickable cell title */
 "Write A Review" = "Escribe una reseña";
