--- a/SafeBible2/SafeBible_ios/SafeBible/fi.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/fi.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Pidän siitä!";
 
+/* Icons for home screen */
+"Icons" = "kuvakkeet";
+
 /* Languages view page title */
 "Languages" = "Kieli (kielet";
+
+/* Result of last concordance search */
+"Last Search" = "Viimeinen haku";
 
 /* Menu view page title */
 "Menu" = "valikko";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Poistaa";
 
+/* Concordance search bar */
+"Search" = "Hae";
+
+/* Concordance search history */
+"Searches" = "haut";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Lähetä meille kommentteja";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Videot";
+
+/* Title of Search page */
+"Word Search" = "Sanahaku";
 
 /* Clickable cell title */
 "Write A Review" = "Kirjoita arvostelu";
