--- a/SafeBible2/SafeBible_ios/SafeBible/fr.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/fr.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 /* Title on action sheet */
-"+ More Bibles" = "+ Plus de Bibles";
+"+ More Bibles" = "+ Plus de bibles";
 
 /* Title on action sheet */
 "+ More Languages" = "+ Plus de langues";
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Je l'aime!";
 
+/* Icons for home screen */
+"Icons" = "Les icônes";
+
 /* Languages view page title */
 "Languages" = "Les langues";
+
+/* Result of last concordance search */
+"Last Search" = "Dernière recherche";
 
 /* Menu view page title */
 "Menu" = "Menu";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Retirer";
 
+/* Concordance search bar */
+"Search" = "Chercher";
+
+/* Concordance search history */
+"Searches" = "Recherches";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Envoyez-nous des commentaires";
@@ -112,7 +124,7 @@
 "Share" = "Partager";
 
 /* Clickable cell title */
-"Share Bible App" = "Partager la Bible App";
+"Share Bible App" = "Partager Bible App";
 
 /* Clickable cell title */
 "Share SafeBible" = "Partager SafeBible";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Vidéos";
+
+/* Title of Search page */
+"Word Search" = "Recherche de mot";
 
 /* Clickable cell title */
 "Write A Review" = "Écrire une critique";
