--- a/SafeBible2/SafeBible_ios/SafeBible/hu.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/hu.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Tetszik!";
 
+/* Icons for home screen */
+"Icons" = "Ikonok";
+
 /* Languages view page title */
 "Languages" = "Nyelvek";
+
+/* Result of last concordance search */
+"Last Search" = "Utolsó keresés";
 
 /* Menu view page title */
 "Menu" = "Menü";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "eltávolít";
 
+/* Concordance search bar */
+"Search" = "Keresés";
+
+/* Concordance search history */
+"Searches" = "keresések";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Küldj nekünk megjegyzéseket";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Videók";
+
+/* Title of Search page */
+"Word Search" = "Szó keresése";
 
 /* Clickable cell title */
 "Write A Review" = "Írja meg a véleményét";
