--- a/SafeBible2/SafeBible_ios/SafeBible/it.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/it.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Mi piace!";
 
+/* Icons for home screen */
+"Icons" = "Icone";
+
 /* Languages view page title */
 "Languages" = "Le lingue";
+
+/* Result of last concordance search */
+"Last Search" = "Ultima ricerca";
 
 /* Menu view page title */
 "Menu" = "Menu";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Rimuovere";
 
+/* Concordance search bar */
+"Search" = "Ricerca";
+
+/* Concordance search history */
+"Searches" = "ricerche";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Inviaci commenti";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "video";
+
+/* Title of Search page */
+"Word Search" = "Ricerca di parole";
 
 /* Clickable cell title */
 "Write A Review" = "Scrivere una recensione";
