--- a/SafeBible2/SafeBible_ios/SafeBible/ms.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/ms.lproj/Localizable.strings
@@ -24,7 +24,7 @@
 "Bibles" = "Alkitab";
 
 /* Menu option to Bookmark verse */
-"Bookmark" = "Bookmark";
+"Bookmark" = "Penanda buku";
 
 /* Table Contents view page title */
 "Books" = "Buku";
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Saya sukakannya!";
 
+/* Icons for home screen */
+"Icons" = "Ikon";
+
 /* Languages view page title */
 "Languages" = "Bahasa";
+
+/* Result of last concordance search */
+"Last Search" = "Carian Terakhir";
 
 /* Menu view page title */
 "Menu" = "Menu";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Keluarkan";
 
+/* Concordance search bar */
+"Search" = "Carian";
+
+/* Concordance search history */
+"Searches" = "Carian";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Hantar Komen Kami";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Video";
+
+/* Title of Search page */
+"Word Search" = "Carian perkataan";
 
 /* Clickable cell title */
 "Write A Review" = "Menulis ulasan";
