--- a/SafeBible2/SafeBible_ios/SafeBible/pt-PT.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/pt-PT.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Eu gosto disso!";
 
+/* Icons for home screen */
+"Icons" = "Ícones";
+
 /* Languages view page title */
 "Languages" = "línguas";
+
+/* Result of last concordance search */
+"Last Search" = "Última pesquisa";
 
 /* Menu view page title */
 "Menu" = "Cardápio";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Remover";
 
+/* Concordance search bar */
+"Search" = "Procurar";
+
+/* Concordance search history */
+"Searches" = "Pesquisas";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Envie-nos comentários";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Vídeos";
+
+/* Title of Search page */
+"Word Search" = "Procura de palavras";
 
 /* Clickable cell title */
 "Write A Review" = "Escreva uma crítica";
