--- a/SafeBible2/SafeBible_ios/SafeBible/ru.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/ru.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Мне это нравится!";
 
+/* Icons for home screen */
+"Icons" = "Иконки";
+
 /* Languages view page title */
 "Languages" = "Языки";
+
+/* Result of last concordance search */
+"Last Search" = "Последний поиск";
 
 /* Menu view page title */
 "Menu" = "Меню";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Удалить";
 
+/* Concordance search bar */
+"Search" = "Поиск";
+
+/* Concordance search history */
+"Searches" = "Поисковые";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Отправить нам комментарии";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Видео";
+
+/* Title of Search page */
+"Word Search" = "Поиск слова";
 
 /* Clickable cell title */
 "Write A Review" = "Написать обзор";
