--- a/SafeBible2/SafeBible_ios/SafeBible/sk.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/sk.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Páči sa mi to!";
 
+/* Icons for home screen */
+"Icons" = "ikony";
+
 /* Languages view page title */
 "Languages" = "jazyky";
+
+/* Result of last concordance search */
+"Last Search" = "Posledné vyhľadávanie";
 
 /* Menu view page title */
 "Menu" = "Ponuka";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "odstrániť";
 
+/* Concordance search bar */
+"Search" = "Vyhľadávanie";
+
+/* Concordance search history */
+"Searches" = "hľadá";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Pošlite nám Komentáre";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "videá";
+
+/* Title of Search page */
+"Word Search" = "Vyhladavanie slov";
 
 /* Clickable cell title */
 "Write A Review" = "Napísať recenziu";
