--- a/SafeBible2/SafeBible_ios/SafeBible/sv.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/sv.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Jag gillar det!";
 
+/* Icons for home screen */
+"Icons" = "ikoner";
+
 /* Languages view page title */
 "Languages" = "språk";
+
+/* Result of last concordance search */
+"Last Search" = "Senaste sökningen";
 
 /* Menu view page title */
 "Menu" = "Meny";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Ta bort";
 
+/* Concordance search bar */
+"Search" = "Sök";
+
+/* Concordance search history */
+"Searches" = "sökningar";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Skicka oss kommentarer";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "videoklipp";
+
+/* Title of Search page */
+"Word Search" = "Ordsökning";
 
 /* Clickable cell title */
 "Write A Review" = "Skriva en recension";
