--- a/SafeBible2/SafeBible_ios/SafeBible/th.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/th.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "ฉันชอบมัน!";
 
+/* Icons for home screen */
+"Icons" = "ไอคอน";
+
 /* Languages view page title */
 "Languages" = "ภาษา";
+
+/* Result of last concordance search */
+"Last Search" = "ค้นหาล่าสุด";
 
 /* Menu view page title */
 "Menu" = "เมนู";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "เอาออก";
 
+/* Concordance search bar */
+"Search" = "ค้นหา";
+
+/* Concordance search history */
+"Searches" = "ค้นหา";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "ส่งความคิดเห็นถึงเรา";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "วิดีโอ";
+
+/* Title of Search page */
+"Word Search" = "ค้นหาคำ";
 
 /* Clickable cell title */
 "Write A Review" = "แสดงความคิดเห็น";
