--- a/SafeBible2/SafeBible_ios/SafeBible/tr.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/tr.lproj/Localizable.strings
@@ -53,8 +53,14 @@
 /* User text in message to other */
 "I like it!" = "Bunu sevdim!";
 
+/* Icons for home screen */
+"Icons" = "Simgeler";
+
 /* Languages view page title */
 "Languages" = "duujjil";
+
+/* Result of last concordance search */
+"Last Search" = "Son arama";
 
 /* Menu view page title */
 "Menu" = "Menü";
@@ -104,6 +110,12 @@
 /* Red Delete Button text */
 "Remove" = "Kaldır";
 
+/* Concordance search bar */
+"Search" = "Arama";
+
+/* Concordance search history */
+"Searches" = "Aramalar";
+
 /* Clickable cell title
    Feedback view title */
 "Send Us Comments" = "Bize Yorum Gönderin";
@@ -129,6 +141,9 @@
 /* Title of Videos page
    Videos Cell Title */
 "Videos" = "Videolar";
+
+/* Title of Search page */
+"Word Search" = "Kelime arama";
 
 /* Clickable cell title */
 "Write A Review" = "Bir değerlendirme yazın";
